--- a/views/item-detail.ejs
+++ b/views/item-detail.ejs
@@ -10,6 +10,7 @@
   <h1><%= title %></h1>
   <ul>
       <li>
+        <img src="<%= image %>" alt="<%= item.item_name %>">
         <strong>Name:</strong> <%= item.item_name %><br>
         <strong>Category:</strong> <%= category.category_name %><br>
         <strong>Price:</strong> <%= item.price %><br>
